# better-dotenv

./: .gitignore  README.md  USAGE.md  pyproject.toml  requirements.txt
.github/workflows/: dev.yaml  dev.yml  prepublish-tests.yml  publish-testpypi.yml  publish.yml  test.yml  versioning-test.yml
notes/: plan.md  todo.md
secret_garden/: __init__.py  errors.py  parsers.py  readers.py  utils.py
tests/: __init__.py  conftest.py  test_loaders.py  test_readers.py
tests/data/: .env  env.env  env.json  env.toml  env.xml  env.yaml
typed_env/: __init__.py  errors.py  parsers.py  reader.py  readers.py  utils.py
typed_env/errors/: __init__.py  reader.py
